...
    route: 'HomeTab',
    label: '홈',
    image: [require('../../../assets/icons/tab-home.png'), require('../../../assets/icons/tab-home-active.png')],
  },
  {
    route: 'CollectionTab',
    label: '내 고객',
    image: [require('../../../assets/icons/tab-dex.png'), require('../../../assets/icons/tab-dex-active.png')],
  },
  { route: 'CaptureTab', label: '촬영', icon: Camera },
  { route: 'MapTab', label: '지부', icon: Compass },
  { route: 'MyTab', label: '마이페이지', icon: User },
];
...
