appId: com.persimmontree.catdex
---
- launchApp:
    clearState: false
- assertVisible: "홈"
- tapOn: "내 고객"
- tapOn:
    text: "Dismiss"
    optional: true
- tapOn: "내 고객"
- assertVisible: "고객 도감"
- tapOn:
    text: ".*희귀도.*"
    index: 0
- tapOn:
    text: "Dismiss"
    optional: true
- assertVisible: ".*고객번호.*"
- tapOn: "뒤로 가기"
- assertVisible: "고객 도감"
