appId: com.persimmontree.catdex
---
- launchApp:
    clearState: false
- assertVisible: "홈"
- tapOn: "마이페이지"
- tapOn:
    text: "Dismiss"
    optional: true
- tapOn: "마이페이지"
- assertVisible: "마이페이지"
- tapOn: "프로필 수정"
- tapOn:
    text: "Dismiss"
    optional: true
- assertVisible: "닉네임"
- tapOn: "뒤로 가기"
- assertVisible: "마이페이지"
